refine for configureWriteCache javadocs

--- a/marklogic-sesame/src/main/java/com/marklogic/semantics/sesame/overview.html
+++ b/marklogic-sesame/src/main/java/com/marklogic/semantics/sesame/overview.html
@@ -1,4 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
+<body>
 <head><title>MarkLogic Sesame API Overview</title></head>
 <p>
 <h2>MarkLogic Sesame</h2>
